# vUbercool

./: CMakeLists.txt  README.md  config.h.template  todo.txt
conf/: dns.conf  http.conf
include/: Hosts.h  Statistics.h  vUbercool.h  war_asio.h  war_basics.h  war_debug_helper.h  war_error_handling.h  war_impl.h  war_transaction.h
include/log/: WarLog.h
include/tasks/: WarPipeline.h  WarThreadpool.h
src/: CMakeLists.txt
src/daemon/: CMakeLists.txt  StatisticsManager.cpp  VhostManager.cpp  main.cpp
src/dnsd/: CMakeLists.txt  DnsDaemon.cpp  Message.h  Zone.h
src/hosts/: CMakeLists.txt  DefaultHost.cpp  StaticPageHost.cpp
src/httpd/: CMakeLists.txt  HttpDaemon.cpp  HttpRequest.cpp  HttpRequest.h  HttpRequestParser.h  ParseHttpRequest.cpp
src/log/: CMakeLists.txt  WarLog.cpp
src/tasks/: CMakeLists.txt  WarPipeline.cpp  WarThreadpool.cpp
